style.css
@font-face {
    font-family: Niconne;
    src: url('fonts/Niconne-Regular.ttf') format(ttf);
}

*{
    margin: 0;
    padding: 0;
}

body{
    display: flex;
    flex-direction: column;
    font-family: sans-serif;
}

.top-header{
    flex-basis: 100%;
    border-bottom: 1px solid rgb(176, 180, 173);
    padding: 20px;
    display: flex;
    justify-content: center;
    align-items: baseline;
}



.ul-header-1{
    width: 118%;
    list-style-type: none;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    gap: 100px;
    left:40%;
}

.header a{
    text-decoration: none;
    color: rgb(0, 0, 0);
    font-size: 20px;
}

.top-header-p{
    font-family: Niconne;
    margin: 0;
    margin-left: 4%;
    font-size: 45px;
    font-weight: 900;
    display: flex;
    align-items: flex-end;
}

.top-header-p::after{
    content: ".";
    color: orange;
    font-size: 45px;
}

.header-icon{
    width: 100%;
    display: flex;
    justify-content: flex-end;
    gap: 40px;
}

i{
    margin-right: 4%;
}

.menu{
    position: relative;
    margin-top: 3%;
    left: 5%;
    border-radius: 46px;
    width: 90%;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

.top-img-1{
    position: relative;
    left: .5%;
    /* top: 12%;
    width: 95.5%; */
}

.top-text{
    position: relative;
    top: 12%;
    background-color: #E7FAFE;
    display: flex;
    flex-direction: column;
    row-gap: 65px;
}
 
.small-box1{
    display: flex;
    justify-content: space-between;
    background-color: rgb(255, 255, 255);
    margin-left: 6%;
    margin-top: 10%;
    width: 16%;
    padding: 5px 10px;
    border-radius: 40px;
} 

.small-box1-p{
    font-size: 15px;
    text-align: center;
    font-weight: 700;
}

.small-box1-img{
    width: 33px;
    height: 28px;
    align-self: center;
}

.top-text-h1{
    font-size: 60px;
    margin-left: 6%;
    /* margin-top: 5%;
    margin-bottom: 10%; */
}

.top-text-p{
    position: relative;
    bottom: 4%;
    font-size: 15px;
    margin-left: 6%;
}

.small2-box{
    position: relative;
    bottom: 4%;
    margin-left: 6%;
    width: 27%;
    display: flex;
    justify-content: space-between;
}
.small-box2 p{
    border-radius: 40px;
    width: 146%;
    padding: 10px 5px;
    background-color: #0000000D;
    text-align: center;
    font-size: 14px;
    flex-shrink: 0;
}

.small-box3 p{
    border-radius: 40px;
    width: 146%;
    padding: 10px 5px;
    background-color: #0000000D;
    text-align: center;
    font-size: 14px;
    flex-shrink: 0;
}

.id-instagram{
    width: 86%;
    height: 10%;
    margin-left: 6%;
    margin-top: 3%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.id-instagram a{
    text-decoration: none;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    width: 17%;
    align-self: center;
    padding: 27px 72px;
    text-align: center;
    line-height: 50%;
    border-radius: 20px;
}

.header-vegetables{
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    width: 90%;
    margin-left: 5%;
    margin-top: 7%;
}

.header-vegetables-a{
    text-decoration:  none;
    background-color: #E7FAFE;
    color: rgb(0, 0, 0);
    padding: 15px 20px;
    border-radius: 10px;
}

.vegetables-box{
    display: flex;
    justify-content: space-around;
    width: 95%;
    margin-left: 2.5%;
    margin-top: 3%;
}

.vegetables0,
.vegetables1,
.vegetables2,
.vegetables3,
.vegetables4,
.vegetables5{
    border-radius: 40px;
    width: 13.3%;
    height: 12.5vw;
    display: flex;
    flex-direction: column;
    justify-items: center;
}

.vegetables0{
background: #70824600;
background: linear-gradient(180deg, rgba(112, 130, 70, 0) 32%, rgba(243, 245, 240, 1) 79%);
}

.vegetables1{
background: #a8db8f;
background: linear-gradient(180deg, rgba(168, 219, 143, 0) 35%, rgba(226, 237, 223, 1) 88%);
}

.vegetables2{
background: #a8db8f;
background: linear-gradient(180deg, rgba(168, 219, 143, 0) 35%, rgba(237, 223, 223, 1) 88%);
}

.vegetables3{
    background: #a8db8f;
background: linear-gradient(180deg, rgba(168, 219, 143, 0) 35%, rgba(237, 234, 223, 1) 88%);
}

.vegetables4,
.vegetables5{
background: #a8db8f;
background: linear-gradient(180deg, rgba(168, 219, 143, 0) 35%, rgba(237, 237, 237, 1) 88%);
}

.vegetables-p1{
    align-self: center;
    position: relative;
    top: 32%;
    font-weight: 700;
    font-size: 17px;
}

.vegetables-img{
    align-self: center;
    width: 55.4%;
    height: 5.98vw;
    overflow: hidden;
}

.lick-background{
    position: relative;
    bottom: 53%;
    left: 80%;
}

.lick-red,
.lick-white{
    position: relative;
    bottom: 56%;
    left: 71%;
}

.simpel-recipes-header{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 13%;
    margin-bottom: 3%;
}

.simpel-recipes-header p{
    width: 37.4%;
    margin-top: 2%;
}

.simpel-recipes-header-h1{
    margin: 0;
    font-size: 46px;
}

.simpel-recipes{
    margin-left: 6%;
    width: 90%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.simpel-recipes1{
    width: 31.1%;
    height: 26.01vw;
    margin-top: 3%;
    background: linear-gradient(180deg,rgba(231, 250, 254, 0) 0%, rgba(231, 250, 254, 1) 75%);
    border-radius: 40px;
}

.simpel-recipes-2{
    position: relative;
    background-color: rgb(45, 88, 50);
    width: 520px;
    height: 490px;
    margin-top: 3%;
}


.simpel-recipes-img1{
    position: absolute;
    top: 1%;
}

.simpel-recipes-img2{
    position: absolute;
    left: 6%;
    bottom: 0;
}

.simpel-recipes-h3{
    margin: 0;
    padding: 0;
    display: inline;
    position: relative;
    left: 33%;
    top: 6%;
    color: rgb(255, 255, 255);
    font-family: Niconne;
    font-size: 2rem;
    z-index: 1;
}
/* ... */

